--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.6.0",
     "nodemon": "^3.1.11",
